# wxwidgets-hello

./: CMakeLists.txt  Info.plist  hello2.cc  hello3.cc  test.fbp
python/: hello.py  myframe1.py
